appId: de.leongeorgi.RudolstadtForiOS
name: App Store - Artists
tags:
  - app-store
---
- runFlow: suites/relaunch.yaml
- extendedWaitUntil:
    visible:
      id: "schedule-screen"
    timeout: 20000
- tapOn:
    id: "theatermasks\\.fill"
- extendedWaitUntil:
    visible:
      id: "artist-194"
    timeout: 20000
- extendedWaitUntil:
    visible:
      id: "artist-image-loaded-194"
    timeout: 30000
- waitForAnimationToEnd:
    timeout: 8000
- takeScreenshot: 02-artists
