appId: de.leongeorgi.RudolstadtForiOS
name: App Store - Friend recommendations
tags:
  - app-store
---
- runFlow: suites/relaunch.yaml
- extendedWaitUntil:
    visible:
      id: "schedule-screen"
    timeout: 20000
- tapOn:
    id: "person.2\\.fill"
- scrollUntilVisible:
    element:
      text: "Friend recommendations|Freundesempfehlungen"
    direction: DOWN
    timeout: 15000
    speed: 50
    visibilityPercentage: 60
    centerElement: true
- tapOn:
    text: "Show more|Mehr anzeigen"
- extendedWaitUntil:
    visible:
      text: "Friend recommendations|Freundesempfehlungen"
    timeout: 15000
- extendedWaitUntil:
    visible:
      id: "artist-image-loaded-175"
    timeout: 30000
- waitForAnimationToEnd:
    timeout: 5000
- takeScreenshot: 05-friends
