appId: de.leongeorgi.RudolstadtForiOS
name: App Store - News detail
tags:
  - app-store
---
- runFlow: suites/relaunch.yaml
- extendedWaitUntil:
    visible:
      id: "schedule-screen"
    timeout: 20000
- tapOn:
    id: "news-toolbar-button"
- scrollUntilVisible:
    element:
      id: "news-(1740|1741)"
    direction: DOWN
    timeout: 20000
    speed: 50
    visibilityPercentage: 60
    centerElement: true
- tapOn:
    id: "news-(1740|1741)"
- extendedWaitUntil:
    visible:
      id: "news-detail-(1740|1741)"
    timeout: 15000
- waitForAnimationToEnd:
    timeout: 5000
- takeScreenshot: 06-news-detail
